--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
       <p>간편한 검색과 스마트한 분석을 통한 맞춤 서비스로</p>
       <p>이게뭐약에서 당신의 건강을 완성해보세요!</p>
       <a>
-        <button type="button" class="b-button" onclick="location.href='/nutri/nutri_search'">바로가기</button>
+        <button type="button" class="b-button" onclick="location.href='/nutri/search'">바로가기</button>
       </a>
     </div>
   </div>
