--- a/src/main/resources/static/css/nutri_about.css
+++ b/src/main/resources/static/css/nutri_about.css
@@ -56,7 +56,7 @@
 .featurette-heading {
   letter-spacing: -.01rem;
   margin-top: 40px !important;
-  margin-left: 80px;
+  margin-left: 75px;
   margin-bottom: 50px;
 
 }
@@ -69,7 +69,7 @@
 
 .nutri_about li {
   font-size: 32px;
-  margin-left: 110px;
+  margin-left: 40px;
   margin-bottom: 20px;
 }
 
@@ -79,11 +79,16 @@
   border-radius: 5px;
 }
 
+.col-8, .col-2 {
+	padding-left: 0;
+	padding-right: 0;
+}
+
 .heart-button {
   border: none;
   background-color: transparent;
+  height: 126px;
   padding: 0;
-  margin-left: 10px;
   font-size: 38px;
   color: #fff;
   cursor: pointer;
