--- a/src/main/resources/templates/nutri/about.html
+++ b/src/main/resources/templates/nutri/about.html
@@ -8,7 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" th:href="@{/css/nutri_about.css}" />
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <title>영양제 상세 페이지</title>
 </head>
@@ -23,10 +22,10 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-       		<div>
-    			<h2 class="featurette-heading fw-normal lh-1" th:text="${nutri.name}">고려은단 비타민C 1000 </h2>
-              	<button type="button" class="heart-button" aria-label="Heart Button" th:if="${user}" th:onclick="|location.href='@{/user/like(nutri_idx=${nutri.idx}, user_idx=${user.idx})}'|">
-                	<i class="fas fa-heart" ></i>
+       		<div class="row">
+    			<h2 class="featurette-heading fw-normal lh-1 col-8" th:text="${nutri.name}">고려은단 비타민C 1000 </h2>
+              	<button type="button" class="col-2 heart-button" aria-label="Heart Button" th:classappend="${#lists.contains(like_list, nutri.idx)} ? 'active' : ''" th:if="${user}" th:onclick="|location.href='@{/user/like(nutri_idx=${nutri.idx}, user_idx=${user.idx})}'|">
+                	<i class="fas fa-heart"></i>
               	</button>
            </div>
 
@@ -41,7 +40,7 @@
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
             height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
             preserveAspectRatio="xMidYMid slice" focusable="false">
-            <image th:href="@{${nutri.image}}" width="100%" height="100%" />
+            <image th:src="@{${nutri.image}}" width="100%" height="100%" />
           </svg>
         </div>
       </div>
@@ -87,11 +86,7 @@
     <!-- /.container -->
 
     <div id="footer-placeholder"></div>
-    <script th:inline="javascript">
-    	var like = [[${like}]];
-    </script>
     <script th:src="@{/js/hf.js}"></script>
-    <script th:src="@{/js/heartbutton.js}"></script>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
