--- a/src/main/resources/templates/admin/nutri_edit.html
+++ b/src/main/resources/templates/admin/nutri_edit.html
@@ -80,7 +80,7 @@
         <tr>
           <td>제품형태:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="type}" maxlength="500" placeholder="내용을 입력해주세요" th:value="${type}" th:field="${nutri.type}"></textarea>
+            <textarea name="type" maxlength="500" placeholder="내용을 입력해주세요" th:value="${type}" th:field="${nutri.type}"></textarea>
           </td>
         </tr>
         </tbody>
