--- a/src/main/resources/templates/nutri/search.html
+++ b/src/main/resources/templates/nutri/search.html
@@ -17,7 +17,7 @@
     <form action="/nutri/result">
       <div class="input-group my-5 pb-5 w-50 m-auto">
         <input type="text" class="form-control" placeholder="어떤 의약품을 찾고 계신가요?" aria-label="어떤 의약품을 찾고 계신가요?"
-          aria-describedby="button-addon2" />
+          aria-describedby="button-addon2" name="keyword"/>
         <button class="btn" type="submit" id="button-addon2">검색</button>
       </div>
     </form>
