--- a/src/main/resources/static/css/nutri_search.css
+++ b/src/main/resources/static/css/nutri_search.css
@@ -25,47 +25,6 @@ a {
   font-weight: 400;
 }
 
-/* Login */
-.container-lg .logo {
-  width: 250px;
-  margin-bottom: 10px;
-}
-
-.container-lg .login_form_title h2 {
-  font-size: 32px;
-  font-weight: bold;
-  margin: 20px 0;
-}
-
-.login_form {
-  width: 40%;
-  margin: 0 auto;
-}
-
-.login_form .input-group {
-  margin-bottom: 10px;
-  height: 45px;
-}
-
-.login_form .login_btn {
-  width: 100%;
-  height: 45px;
-  background-color: #00997b;
-  color: #eee;
-  border: none;
-  border-radius: 8px;
-  margin-bottom: 20px;
-}
-
-.login_form .options a {
-  color: #aaa;
-  text-decoration: underline;
-}
-
-.login_form .options a:first-of-type {
-  margin-right: 20px;
-}
-
 /* Second SearchBar */
 #button-addon2 {
   border: 1px solid #dee2e6;
@@ -88,68 +47,69 @@ a {
 }
 
 .p_name {
-	text-align: left;
-	font-size : 18px;
+  text-align: left;
+  font-size: 18px;
 }
 
 .p_img {
-	float: left;
-	margin-right: 10px 0;
+  float: left;
+  margin-right: 10px 0;
 }
 
 .p_img #product {
-	width: 250px;
+  width: 250px;
 }
 
 .cal-v {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .p_content {
-	display: flex;
-	width: 100%;
-	text-align: left;
-	flex-direction: column;
-	justify-content: center;
-	align-items: baseline;
+  display: flex;
+  width: 100%;
+  text-align: left;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
 }
 
 .row {
-	width:inherit;
+  width: inherit;
 }
 
 .labels {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-.col-10, .col-2 {
-	padding-left: 0;
-	padding-right: 0;
+.col-10,
+.col-2 {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .heart-button {
-	border: none;
-	background-color: transparent;
-	padding: 0;
-	height: 30px;
-	line-height: 30px;
-	font-size: 20px;
-	color: #ccc;
-	cursor: pointer;
-	flex-shrink: 0;
-	vertical-align: -1.5px;
-	/* 버튼이 축소되지 않도록 설정 */
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  color: #ccc;
+  cursor: pointer;
+  flex-shrink: 0;
+  vertical-align: -1.5px;
+  /* 버튼이 축소되지 않도록 설정 */
 }
 
 .heart-button i {
-	transition: color 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 .heart-button.active i {
-	color: rgba(255, 0, 0, 0.719);
+  color: rgba(255, 0, 0, 0.719);
 }
 
 .nutri_list {
@@ -158,7 +118,7 @@ a {
   justify-content: center;
   justify-items: center;
   gap: 100px;
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 .nutri_list .nutri_item {
