230620 - admin 헤더 수정

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -160,6 +160,11 @@ input[id="icon"]:checked + label > span:nth-child(3) {
   margin-left: 20px;
 }
 
+.admin {
+  margin-left: 130px !important;
+}
+
+
 #util #login,
 #util #signup,
 #util #mypage,
