--- a/src/main/resources/templates/admin/nutri_search.html
+++ b/src/main/resources/templates/admin/nutri_search.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-  <link rel="stylesheet" th:href="@{/css/styles.css}" />
+  <link rel="stylesheet" th:href="@{/css/admin_nutri_list.css}" />
   <title>영양제 관리</title>
 </head>
 
