--- a/src/main/resources/static/css/admin_nutri_edit.css
+++ b/src/main/resources/static/css/admin_nutri_edit.css
@@ -45,6 +45,15 @@ td {
   padding: 5px;
 }
 
+#checkIdxButton {
+  font: 14px bold !important;
+  background-color: rgb(10, 78, 124) !important;
+  border: 4px solid rgb(10, 78, 124) !important;
+  border-radius: 4px !important;
+  color: #fff !important;
+}
+
+
 .button-row {
   margin-top: 20px;
   text-align: center;
@@ -80,3 +89,6 @@ td {
   border: 1px solid rgb(212, 26, 26);
   color: #fff;
 }
+
+
+
