230623-header.css, header.html, user/ edit, join, JDBCNutriRepositoryTest.java-햄버거 메뉴 추가, 생년월일 입력 변경(회원가입, 회원정보수정), Nutri Test 오류 수정

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,6 +25,12 @@
         <ul>
           <li><a href="/nutri/search"
 						style="font-family: 'NanumSquareNeo-Variable'">영양제 찾기</a></li>
+          <li><a href="/"
+						style="font-family: 'NanumSquareNeo-Variable'">의약품 찾기</a></li>
+          <li><a href="/"
+						style="font-family: 'NanumSquareNeo-Variable'">복용 스케줄</a></li>
+          <li><a href="/"
+						style="font-family: 'NanumSquareNeo-Variable'">내 근처 약국</a></li>
         </ul>
       </div>
     </div>
