--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -75,7 +75,7 @@
         </div>
         <div class="info-title">생년월일</div>
         <div class="form-floating">
-          <input type="date" name="birth" th:field="${user.birth}"/>
+          <input type="text" name="birth"  class="form-control" th:field="${user.birth}"/>
         </div>
         <div class="form-btn">
           <button class="w-100 btn btn-lg btn-primary" type="submit">
