--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -27,6 +27,10 @@
   height: 100%;
 }
 
+#in_navi li{
+	padding-bottom:15px;
+}
+
 #checkbox {
   width: 0px;
   height: 100%;
@@ -106,6 +110,7 @@ input[id="icon"]:checked + label > span:nth-child(3) {
 
 #icon:checked + label + #in_navi {
   left: 0px;
+  text-align: left;
 }
 
 #icon:checked + label + #in_navi > ul > li > a {
