--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -72,7 +72,7 @@
         </div>
             <div class="info-title">생년월일</div>
             <div class="form-floating">
-              <input type="date" name="birth" />
+              <input type="text" name="birth"  class="form-control"/>
             </div>
             <div class="form-btn">
               <button class="w-100 btn btn-lg btn-primary" type="submit">
