230623 - NutriController.java, NutriRepository.java,UserRepository.java, NutriService.java, header.css, nutri_result.css, nutri_search.css, user_likes.css, header.html, search.html - 찜 제품명 위치 수정, 검색 결과 가운데 오는 거 수정, 햄버거 버튼 공간 클릭되게 수정,  60세 이상 추천 안되는 거 수정, 이미지 크기 일정하게, 성별이 없을 때 추천 텍스트 수정

--- a/src/main/resources/static/css/user_likes.css
+++ b/src/main/resources/static/css/user_likes.css
@@ -28,8 +28,11 @@
 }
 
 .grid-contents {
-	width: 80%;
+	display: grid;
+	grid-template-columns: auto auto;
 	margin: 0 auto;
+	justify-items: center;
+	justify-content: space-evenly;
 }
 
 .p_name {
@@ -44,6 +47,7 @@
 
 .p_img #product {
 	width: 250px;
+	height: 250px;
 }
 
 
@@ -66,13 +70,15 @@
 }
 
 .cal-v {
-	display: flex;
+	display: grid;
+	grid-template-columns: auto auto;
 	justify-content: center;
 }
 
 .p_content {
 	display: flex;
 	width: 300px;
+	padding: 0 20px;
 	flex-direction: column;
 	justify-content: center;
 	align-items: baseline;
@@ -88,7 +94,7 @@
 	align-items: flex-start;
 }
 
-.col-10, .col-2 {
+.col-10, .col-2, .col-8 {
 	padding-left: 0;
 	padding-right: 0;
 }
