--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -27,8 +27,8 @@
   height: 100%;
 }
 
-#in_navi li{
-	padding-bottom:15px;
+#in_navi li {
+  padding-bottom: 15px;
 }
 
 #checkbox {
@@ -54,7 +54,13 @@ input[id="icon"] + label {
   /* 커서를 올려놓을 때 모양이 바뀐다. */
 }
 
-input[id="icon"] + label > span {
+input[id="icon"] + label > div {
+  width: 40px;
+  height: 30px;
+  z-index: 2;
+}
+
+input[id="icon"] + label span {
   position: absolute;
   display: block;
   width: 40px;
@@ -66,30 +72,42 @@ input[id="icon"] + label > span {
   z-index: 2;
 }
 
-input[id="icon"] + label > span:nth-child(1) {
+input[id="icon"] + label span {
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 5px;
+  border-radius: 30px;
+  background: rgb(94, 94, 94);
+  transition: all 0.35s;
+  /* 진행되는 과정들을 천천히 보여줄 수 있다. 0.35초 동안 진행됨 */
+  z-index: 2;
+}
+
+input[id="icon"] + label span:nth-child(1) {
   top: 0px;
 }
 
-input[id="icon"] + label > span:nth-child(2) {
+input[id="icon"] + label span:nth-child(2) {
   top: 50%;
   transform: translateY(-50%);
   /* 엘리먼트를 변형할 때 쓴다. 비틀거나 구부리거나 돌릴 때 . 여러가지로 모양을 바꿀 때 */
 }
 
-input[id="icon"] + label > span:nth-child(3) {
+input[id="icon"] + label span:nth-child(3) {
   bottom: 0px;
 }
 
-input[id="icon"]:checked + label > span:nth-child(1) {
+input[id="icon"]:checked + label span:nth-child(1) {
   top: 50%;
   transform: translateY(-50%) rotate(45deg);
 }
 
-input[id="icon"]:checked + label > span:nth-child(2) {
+input[id="icon"]:checked + label span:nth-child(2) {
   opacity: 0;
 }
 
-input[id="icon"]:checked + label > span:nth-child(3) {
+input[id="icon"]:checked + label span:nth-child(3) {
   bottom: 50%;
   transform: translateY(50%) rotate(-45deg);
 }
@@ -168,7 +186,6 @@ input[id="icon"]:checked + label > span:nth-child(3) {
 .admin {
   margin-left: 130px !important;
 }
-
 
 #util #login,
 #util #signup,
