230702 - 성별 입력값 수정

--- a/bin/main/templates/user/join.html
+++ b/bin/main/templates/user/join.html
@@ -61,13 +61,13 @@
             <div class="info-title">성별</div>
            <div class="form-floating gender">
           <label>
-          	<input type="radio" name="gender" id="male" value="male"/> 남자
+          	<input type="radio" name="gender" id="male" value="남자"/> 남자
           </label>
           <label>
-          	<input type="radio" name="gender" id="female" value="female"/> 여자 
+          	<input type="radio" name="gender" id="female" value="여자"/> 여자 
           </label>
           <label>
-          	<input type="radio" name="gender" id="nan" value="nan" /> 없음
+          	<input type="radio" name="gender" id="nan" value="없음" /> 없음
           </label>
         </div>
             <div class="info-title">생년월일</div>
