--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -64,13 +64,13 @@
         <div class="info-title">성별</div>
         <div class="form-floating gender">
           <label>
-          <input type="radio" name="gender" id="male" value="male" th:checked="${user.gender == 'male'}" /> 남자
+          <input type="radio" name="gender" id="male" value="남자" th:checked="${user.gender == '남자'}" /> 남자
           </label>
           <label>
-          <input type="radio" name="gender" id="female" value="female" th:checked="${user.gender == 'female'}"/> 여자 
+          <input type="radio" name="gender" id="female" value="여자" th:checked="${user.gender == '여자'}"/> 여자 
           </label>
           <label for="nan">
-          <input type="radio" name="gender" id="nan" value="nan" th:checked="${user.gender == 'nan'}"/> 없음
+          <input type="radio" name="gender" id="nan" value="없음" th:checked="${user.gender == '없음'}"/> 없음
           </label>
         </div>
         <div class="info-title">생년월일</div>
