--- a/bin/main/templates/nutri/search.html
+++ b/bin/main/templates/nutri/search.html
@@ -32,7 +32,7 @@
       <div class="rec-products row row-cols-3">
         <div class="rec-product col" th:each="nutri : ${nutri_rec}">
           <div class="product_rank">
-            <h3 th:text="${nutriStat.index} + 1 + '.'">1.</h3>
+            <h3 th:text="${nutriStat.index} + 1 + '.'" class='ranking'>1.</h3>
           </div>
           <div class="cal">
             <div class="cal-v">
@@ -53,8 +53,8 @@
                 <div class="labels">
                   <label for="nutri_contens">구분: <span th:text="${nutri.category}">비타민C</span></label> <label
                     for="nutri_company">제조사: <span th:text="${nutri.company}">고려은단</span></label>
-                    <div th:each="s : ${nutri.review}">
-						<span th:text="${s}"></span>
+					<div th:each="s : ${nutri.review}" class='review'>
+						<span th:text="|${s.key} ${s.value}|"></span>
 					</div>
                 </div>
               </div>
